# metpo-kgm-studio

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CURATION_GUIDE.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: tests.yml  validate-definitions.yml
assignments/: README.md  curator1.tsv  curator2.tsv  curator3.tsv  curator4.tsv  curator5.tsv  curator6.tsv
outputs/: 2025-10-15_METPO_1000626_output.json  README.md  curator4.json
outputs/final/: curator4_all_terms.json  curator4_all_terms.tsv  curator5_all_terms_v3.tsv  curator6_all_terms.json  curator6_all_terms.tsv
outputs/raw/: 1000059.json  1000060.json  1000186.json  1000304.json  1000334.json  1000623.json  1000638.json  1000639.json  1000654.json  1000656.json  1000660.json  1000664.json  1000667.json  1000670.json  1000676.json  1000678.json  1000679.json  1000682.json  1000683.json  1000692.json  1000720.json  1000800.json  1000803.json  1000845.json  1001102.json  1002002.json  1002008.json  1002036.json  1003001.json  1003006.json  1003007.json  1003008.json  1003013.json  curator4.json  metpo_definitions_curated.json  metpo_definitions_number_of_definitions_10_17.json
outputs/raw/curator5/: 2025-10-09_all terms_output_2.json  2025-10-09_all_terms_output_1.json  2025-10-30_curator5_v2.1_batch1_output.json  2025-10-30_curator5_v2.1_batch1_robot.tsv  2025-10-30_curator5_v2.1_batch2_output.json  2025-10-30_curator5_v2.1_batch2_robot.tsv  2025-10-30_curator5_v2.1_batch3_output.json  2025-10-30_curator5_v2.1_batch3_robot.tsv  2025-10-30_curator5_v2.1_batch4_output.json  2025-10-30_curator5_v2.1_batch4_robot.tsv  batch1_curator5_v2.1_output.json  batch2_curator5_v2.1_output.json  batch2_curator5_v2.1_robot.tsv  batch3_curator5_v2.1_output.json  batch3_curator5_v2.1_robot.tsv  batch4_curator5_v2.1_output.json  curator5_all_terms_v1.json  curator5_all_terms_v3.json
outputs/raw/curator6/: 2025-10-16_METPO_1000646_output.json  2025-10-20-metpo_definitions_reviewed.json  2025_10_30_curator6_raw_output  metpo_definitions.json
outputs/reviewed/curator5/: 2025-10-09_curator5_definitions_final.json  2025-10-17_curator5_v3_output.json  2025-10-17_curator5_v3_output.tsv  2025-10-24_pythoncode_curator5_definitions_robot.tsv
outputs/reviewed/curator6/: 2025-10-16_METPO_1000626_output.json  2025-10-16_METPO_1000646_output_new_sources.json  2025-10-20-curator6-reviewed.json  2025-10-20-metpo_definitions_reviewed.json  2025_10_30_curator6_reviewed  metpo_definitions (1).json
prompts/executed/: 2025-10-09_definition-generation_v2_improved.md  2025-10-09_improvements_v1-to-v2.md  2025-10-17_definition-generation_v3.md  2025-10-30_definition-generation_v2.1.md  README.md  anthea-copy-template-10-20  curator4_prompt1_row1_Anthea.md  curator6_basic_instructions  excel_format_helper.md
prompts/templates/: README.md  definition-generation.md  definition-source-finding.md
scripts/: README.md  json_to_robot_tsv.py
src/metpo_kgm_studio/: splitter.py  validators.py
tests/: test_validators.py
